--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 }
 
 .users {
-  border: 1px solid rgb(253, 253, 253);
+  border: 1px solid rgb(236, 236, 236);
   margin: 8px;
   background-color: rgb(255, 255, 255);
   color: rgb(32, 32, 32);
@@ -14,9 +14,9 @@ body {
   height: auto;
   border-radius: 5px;
   text-align: left;
-  -webkit-box-shadow: 0px 2px 10px 0px rgba(167, 167, 167, 0.48);
-  -moz-box-shadow: 0px 2px 10px 0px rgba(170, 170, 170, 0.48);
-  box-shadow: 0px 2px 10px 0px rgba(172, 172, 172, 0.48);
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(167, 167, 167, 0.48);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(170, 170, 170, 0.48);
+  box-shadow: 0px 2px 2px 0px rgba(206, 206, 206, 0.48);
 }
 
 .users p {
@@ -27,7 +27,7 @@ body {
 }
 
 .users p b {
-  background: rgb(240, 237, 239);
+  background: rgb(247, 239, 243);
   margin-left: 5px;
   color: rgb(65, 65, 65);
   letter-spacing: 0.1em;
@@ -43,8 +43,6 @@ body {
 }
 .header {
   display: flex;
-  gap: 5px;
-  background: rgb(14, 0, 36);
   background: rgb(231, 231, 231);
   color: rgb(31, 31, 31);
   font-size: 16px;
@@ -52,8 +50,10 @@ body {
   justify-content: center;
   padding: 10px;
   font-weight: bold;
-  border-radius: 5px;
   margin-bottom: 5px;
+}
+.header h2 {
+  margin: 5px;
 }
 .all_details {
   padding: 10px;
