--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,13 @@
 .page {
   text-align: center;
 }
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 40vh;
+}
+.loader p {
+  opacity: .6;
+}
