--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap");
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: serif;
   width: 100%;
-  background-color: white;
   font-family: "Antic Slab", serif;
 }
 
