--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap");
 
 body {
-  margin: 0 auto;
   font-family: serif;
   width: 100%;
   font-family: "Antic Slab", serif;
@@ -9,7 +8,6 @@ body {
 
 .users {
   border: 1px solid rgb(236, 236, 236);
-  margin: 8px;
   background-color: rgb(255, 255, 255);
   color: rgb(32, 32, 32);
   width: 100%;
@@ -76,8 +74,12 @@ body {
 input[type="search"] {
   padding: 10px;
   border: 1px solid rgb(231, 231, 231);
-  width: 50%;
+  width: 100%;
   text-align: center;
+   -webkit-box-shadow: 0px 5px 5px 0px rgba(167, 167, 167, 0.48);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(170, 170, 170, 0.48);
+  box-shadow: 0px 1px 1px 0px rgba(223, 221, 221, 0.38);
+outline: wheat;
 }
 .paginate {
   margin: 20px;
@@ -104,4 +106,17 @@ input[type="search"] {
 }
 .paginate div p {
   margin: 10px;
+}
+
+.sub_page {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 20px;
+  border-bottom: 1px solid rgb(230, 230, 230);
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(167, 167, 167, 0.48);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(170, 170, 170, 0.48);
+  box-shadow: 0px 2px 2px 0px rgba(230, 227, 227, 0.48);
+
 }
