--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   -webkit-box-shadow: 0px 2px 2px 0px rgba(167, 167, 167, 0.48);
   -moz-box-shadow: 0px 2px 2px 0px rgba(170, 170, 170, 0.48);
   box-shadow: 0px 2px 2px 0px rgba(206, 206, 206, 0.48);
+  position: relative;
 }
 
 .users p {
@@ -118,5 +119,5 @@ outline: wheat;
   -webkit-box-shadow: 0px 2px 2px 0px rgba(167, 167, 167, 0.48);
   -moz-box-shadow: 0px 2px 2px 0px rgba(170, 170, 170, 0.48);
   box-shadow: 0px 2px 2px 0px rgba(230, 227, 227, 0.48);
-
 }
+
