--- a/src/index.css
+++ b/src/index.css
@@ -119,5 +119,7 @@ outline: wheat;
   -webkit-box-shadow: 0px 2px 2px 0px rgba(167, 167, 167, 0.48);
   -moz-box-shadow: 0px 2px 2px 0px rgba(170, 170, 170, 0.48);
   box-shadow: 0px 2px 2px 0px rgba(230, 227, 227, 0.48);
+  width: 80%;
+  
 }
 
